--- a/app/src/main/res/menu/menu_sign_in.xml
+++ b/app/src/main/res/menu/menu_sign_in.xml
@@ -2,8 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".VenueListActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item android:id="@+id/sign_in"
+          android:title="@string/menu_sign_in"
+          app:showAsAction="ifRoom|withText"/>
 </menu>
